# empty_rosnode_cplusplus

./: CMakeLists.txt  README.md  package.xml  test.rviz  test_cov_trafo.launch
include/empty_rosnode_cplusplus/: some_dummy_class.h
src/: empty_rosnode_cplusplus.cpp  some_dummy_class.cpp
