<?xml version="1.0"?>
<package format="2">
  <name>empty_rosnode_cplusplus</name>
  <version>0.0.0</version>

  <description>
    does something
  </description>

  <maintainer email="john@doe.edu">John Doe</maintainer>

  <license>BSD</license>

  <author email="john@doe.edu">John Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_frames</depend>
  <depend>aslam_serialization</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>minkindr</depend>
</package>
